--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:Asm": "node dist/asm/server/server.mjs"
+    "serve:ssr:Asm": "node dist/asm/server/server.mjs",
+    "db": "npx json-server db.json -m ./node_modules/json-server-auth"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +24,9 @@
     "@angular/ssr": "^17.3.7",
     "axios": "^1.7.2",
     "express": "^4.18.2",
+    "json-server": "^0.17.4",
+    "jwt-decode": "^4.0.0",
+    "primeng": "^17.18.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -35,6 +39,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
+    "json-server-auth": "^2.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
